# ILMS

./: .gitignore  PLAN.md  README.md  package.json  turbo.json
apps/desktop/: package.json
apps/desktop/src/: bridge.js  bridge.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: backend.rs  lib.rs  main.rs
apps/mcp/: package.json  tsconfig.json
apps/mcp/src/: server.ts
apps/server/: package.json  tsconfig.json
apps/server/src/: bin.ts  index.ts
apps/server/src/agent/: openCodeClient.ts  opencodeRuntime.ts  permissionGate.ts  runner.ts  store.ts  systemPrompt.ts  toolSchema.test.ts  toolSchema.ts
apps/server/src/cases/: store.ts
apps/server/src/db/: index.ts  migrate.ts
apps/server/src/reports/: bundle.ts  html.ts  pdf.ts  render.test.ts  render.ts  routes.ts
apps/server/src/rpc/: broadcast.ts  dispatch.ts  server.ts
apps/server/src/runs/: dedupKey.test.ts  dedupKey.ts  manager.ts  store.ts
apps/server/src/secrets/: store.ts
apps/server/src/targets/: store.ts
apps/server/src/tools/: ToolDriver.ts  registry.ts
apps/server/src/tools/Drivers/: crosslinked.ts  discordOsint.ts  facebookDirectory.ts  facebookRecover.ts  informer.ts  soig.ts  (+4 more)
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  env.ts  index.css  main.tsx
apps/web/src/lib/: download.ts
apps/web/src/routes/: Agent.tsx  Case.tsx  Cases.tsx  Reports.tsx  Run.tsx  Settings.tsx  Tool.tsx  Tools.tsx
apps/web/src/rpc/: client.ts
(+3 files in other folders)
